@@ -2,4 +2,5 @@ pkginclude_HEADERS= \
 status.h \
 scan.h \
 module.h \
-handle.h 
+handle.h \
+info.h
