@@ -10,16 +10,16 @@ int main(int argc, char **argv)
   ipc = ipc_manager_new(0, 1);
 
   ipc_manager_send_msg(ipc, IPC_MSG_ID_SCAN, 
-		       IPC_STRING, "/var/tmp/foo", 
-		       IPC_INT32, 42,
-		       IPC_NONE);
+		       IPC_STRING_T, "/var/tmp/foo", 
+		       IPC_INT32_T, 42,
+		       IPC_NONE_T);
 
   ipc_manager_send_msg(ipc, IPC_MSG_ID_SCAN_FILE, 
-		       IPC_STRING, "/var/tmp/foo/bar/zob2", 
-		       IPC_STRING, "MALWARE",
-		       IPC_STRING, "GrosTrojan",
-		       IPC_STRING, "QUARANTINE",
-		       IPC_NONE);
+		       IPC_STRING_T, "/var/tmp/foo/bar/zob2", 
+		       IPC_STRING_T, "MALWARE",
+		       IPC_STRING_T, "GrosTrojan",
+		       IPC_STRING_T, "QUARANTINE",
+		       IPC_NONE_T);
 
   return 0;
 }
